# lambdatwist-p3p

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  data.h  main.cpp  p3p_generator.h  solver.h
data/: readme.txt  timing_iters.csv
ke/: ke.cpp  ke.h  ke_utils.h
kneip/: kneip.cpp  kneip.h  kneip_utils.h
lambdatwist/: lambdatwist.p3p.h  refine_lambda.h  solve_cubic.h  solve_eig0.h
utils/: mlibtime.cpp  mlibtime.h  random.cpp  random.h  string_helpers.h
utils/cvl/: matrix.h  pose.h  rotation_helpers.h
